# ffmpeg-video-player

./: .gitignore  CMakeLists.txt  player.cpp
libs/ffmpeg/: readme.txt
libs/ffmpeg/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  swresample.lib  swscale.lib
player/: CMakeLists.txt  player-sdl.c  player.cpp
tutorial01/: CMakeLists.txt  tutorial01.c
tutorial02/: CMakeLists.txt  tutorial02.c
tutorial03/: CMakeLists.txt  tutorial03-resampled.c
tutorial04/: CMakeLists.txt  tutorial04-resampled.c
